# Personal-Assistant-WEB

./: LICENSE  README.md  pyproject.toml
pers_assist/: .env  manage.py
pers_assist/news/: views.py
pers_assist/news/templates/news/: index.html  index2.html
pers_assist/pers_assist/: asgi.py  settings.py  urls.py  wsgi.py
pers_assist/pers_assist_app/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
pers_assist/pers_assist_app/migrations/: 0001_initial.py  0002_update_contact_fields.py  0003_fix_contacts_fiels.py  0004_fix_email_fiels.py  0005_add_phone_validation.py  0006_alter_contact_surname.py  0007_alter_contact_phone.py  0008_alter_contact_description.py  0009_alter_contact_description.py  0010_documnets_model_created.py  0010_tag_note.py  0011_alter_tag_tag_name.py  0011_docs_extensions.py  0012_eng_docs_ext.py  0012_tag_slug.py  0013_alter_tag_slug.py  0013_uploadedfile_cloudinary_public_id_and_more.py  0014_merge_20250419_1105.py  0014_uploadedfile_file_url.py  0015_alter_uploadedfile_uploaded_at.py  0016_merge_20250419_1848.py  0017_remove_uploadedfile_file_url_contact_owner_and_more.py  0018_remove_uploadedfile_cloudinary_public_id_and_more.py  0019_alter_tag_slug_alter_tag_tag_name_and_more.py  0020_alter_contact_phone_contact_unique_owner_phone.py  0020_uploadedfile_cloudinary_public_id.py  0021_merge_20250421_1952.py
pers_assist/pers_assist_app/static/pers_assist_app/: create_forms_style.css  forms_style.css  news.css  notes.css  signup.css
pers_assist/users/: forms.py  views.py
(+24 files in other folders)
